back-homolog/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy
  labels:
    app: back-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-deploy
  template:
    metadata:
      labels:
        app: back-deploy
    spec:
      containers:
      - name: back-deploy
        image: artearenahub/space-backend:latest
        ports:
        - containerPort: 3000
