back-homolog/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: back-svc-homolog
spec:
  selector:
    app: back-deploy-homolog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
