back-homolog/ing-octa.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ing-homolog
  annotations:
    cert-manager.io/cluster-issuer: "back-clusterissuer-homolog"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-pass-headers: "Set-Cookie"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host app.octadesk.com;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto https;
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - api-homolog.spacearena.net
    secretName: back-homolog-tls-secret
  rules:
  - host: api-homolog.spacearena.net
    http:
      paths:
      - pathType: Prefix
        path: "/proxy/octadesk(/|$)(.*)"
        backend:
          service:
            name: back-svc-homolog
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: back-svc-homolog
            port:
              number: 80
