back-homolog/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ing-homolog
  annotations:
    cert-manager.io/cluster-issuer: "back-clusterissuer-homolog"
    spec.ingressClassName: "public"
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - api-homolog.spacearena.net
    secretName: back-homolog-tls-secret
  rules:
  - host: api-homolog.spacearena.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: back-svc-homolog
            port:
              number: 80
